deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: we-brokered
  namespace: staging-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: we-brokered
  template:
    metadata:
      labels:
        app: we-brokered
    spec:
      containers:
        - name: we-brokered
          image: 767397791769.dkr.ecr.ap-south-1.amazonaws.com/we-brokered:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: we-brokered-service
  namespace: staging-services
spec:
  type: ClusterIP
  ports:
  - name: http-web
    protocol: TCP
    port: 80
    targetPort: 3001
  selector:
    app: we-brokered
